Updated the loader.

--- a/scroll-road.html
+++ b/scroll-road.html
@@ -22,7 +22,7 @@ body {
 
 <body>
 <section id="imageLoader" class="hidden">
-  <img class="hidden" src="images/car.png" alt="car">
+  <img class="hidden" src="images/car.png" alt="car" data-name="car">
 </section>
 
 <main>
